// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog Header renders Example 1 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-full max-w-screen-sm mb-4"
  >
    <div
      className="sc-cAkrUM gnUndQ"
    >
      <div
        className="sc-hpEguC gAnXIF"
      >
        Title of the modal
      </div>
      <div
        className="sc-kjNGdX lNIRV"
      />
    </div>
  </div>
  <div
    className="flex justify-around items-center w-full max-w-screen-sm mb-4"
  >
    <div
      className="sc-cAkrUM gnUndQ"
    >
      <div
        className="sc-hpEguC gAnXIF"
      >
        Title of the modal
      </div>
      <div
        className="sc-kjNGdX lNIRV"
      >
        <div
          className="sc-fjhLSj cINGDc"
        >
          <svg
            className="sc-cfxfcM"
            fill="none"
            fontSize="2rem"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dialog Header renders Example 2 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-full max-w-screen-sm mb-4"
  >
    <div
      className="sc-cAkrUM gnUndQ"
    >
      <div
        className="sc-iPahhU kgOmyB"
      >
        <svg
          className="sc-fjvvzt"
          fill="none"
          fontSize="2rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20.5 25l-9-9 9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </div>
      <div
        className="sc-hpEguC gAnXIF"
      >
        Title of the modal
      </div>
      <div
        className="sc-kjNGdX lNIRV"
      >
        <div
          className="sc-fjhLSj cINGDc"
        >
          <svg
            className="sc-cfxfcM"
            fill="none"
            fontSize="2rem"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-full max-w-screen-sm mb-4"
  >
    <div
      className="sc-cAkrUM gnUndQ"
    >
      <div
        className="sc-iPahhU kgOmyB"
      >
        <svg
          className="sc-fjvvzt"
          fill="none"
          fontSize="2rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20.5 25l-9-9 9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </div>
      <div
        className="sc-hpEguC gAnXIF"
      />
      <div
        className="sc-kjNGdX lNIRV"
      >
        <div
          className="sc-fjhLSj cINGDc"
        >
          <svg
            className="sc-cfxfcM"
            fill="none"
            fontSize="2rem"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dialog Header renders Example 3 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-full max-w-screen-sm mb-4"
  >
    <div
      className="sc-cAkrUM gnUndQ"
    >
      <div
        className="sc-hpEguC gAnXIF"
      >
        Title of the modal
      </div>
      <div
        className="sc-kjNGdX lNIRV"
      >
        <span
          className="sc-tNXst PUmeJ"
        >
          <svg
            className="sc-ehixzo"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.808 21.846a3.654 3.654 0 11-7.308 0 3.654 3.654 0 017.308 0zm0 0h4.384m0 0a3.654 3.654 0 107.308 0 3.654 3.654 0 00-7.308 0zM12.346 6.5c-1.614 0-2.558 1.096-2.923 2.923L6.5 21.481M19.654 6.5c1.614 0 2.558 1.096 2.923 2.923L25.5 21.481"
              stroke="currentColor"
              strokeLinecap="round"
            />
          </svg>
        </span>
        <span
          className="sc-tNXst PUmeJ"
        >
          <svg
            className="sc-bpUBKd"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22.942 21.846h.558a2 2 0 002-2v-5.5a2 2 0 00-2-2h-15a2 2 0 00-2 2v5.5a2 2 0 002 2h.558m-.366-9.5V8.5a2 2 0 012-2h10.616a2 2 0 012 2v3.846m-.731 7.846V23.5a2 2 0 01-2 2h-9.154a2 2 0 01-2-2v-3.308a2 2 0 012-2h9.154a2 2 0 012 2z"
              stroke="currentColor"
            />
          </svg>
        </span>
        <div
          className="sc-fjhLSj cINGDc"
        >
          <svg
            className="sc-cfxfcM"
            fill="none"
            fontSize="2rem"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-full max-w-screen-sm mb-4"
  >
    <div
      className="sc-cAkrUM gnUndQ"
    >
      <div
        className="sc-hpEguC gAnXIF"
      />
      <div
        className="sc-kjNGdX lNIRV"
      >
        <span
          className="sc-tNXst PUmeJ"
        >
          <svg
            className="sc-ehixzo"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.808 21.846a3.654 3.654 0 11-7.308 0 3.654 3.654 0 017.308 0zm0 0h4.384m0 0a3.654 3.654 0 107.308 0 3.654 3.654 0 00-7.308 0zM12.346 6.5c-1.614 0-2.558 1.096-2.923 2.923L6.5 21.481M19.654 6.5c1.614 0 2.558 1.096 2.923 2.923L25.5 21.481"
              stroke="currentColor"
              strokeLinecap="round"
            />
          </svg>
        </span>
        <span
          className="sc-tNXst PUmeJ"
        >
          <svg
            className="sc-bpUBKd"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22.942 21.846h.558a2 2 0 002-2v-5.5a2 2 0 00-2-2h-15a2 2 0 00-2 2v5.5a2 2 0 002 2h.558m-.366-9.5V8.5a2 2 0 012-2h10.616a2 2 0 012 2v3.846m-.731 7.846V23.5a2 2 0 01-2 2h-9.154a2 2 0 01-2-2v-3.308a2 2 0 012-2h9.154a2 2 0 012 2z"
              stroke="currentColor"
            />
          </svg>
        </span>
        <div
          className="sc-fjhLSj cINGDc"
        >
          <svg
            className="sc-cfxfcM"
            fill="none"
            fontSize="2rem"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dialog Header renders Example 4 1`] = `
<div
  className="flex justify-around items-center w-full max-w-screen-sm"
>
  <div
    className="sc-cAkrUM gnUndQ"
  >
    <div
      className="sc-iPahhU kgOmyB"
    >
      <svg
        className="sc-fjvvzt"
        fill="none"
        fontSize="2rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.5 25l-9-9 9-9"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </div>
    <div
      className="sc-hpEguC gAnXIF"
    >
      Title of the modal title of the modal title of the modal
    </div>
    <div
      className="sc-kjNGdX lNIRV"
    >
      <span
        className="sc-tNXst PUmeJ"
      >
        <svg
          className="sc-ehixzo"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13.808 21.846a3.654 3.654 0 11-7.308 0 3.654 3.654 0 017.308 0zm0 0h4.384m0 0a3.654 3.654 0 107.308 0 3.654 3.654 0 00-7.308 0zM12.346 6.5c-1.614 0-2.558 1.096-2.923 2.923L6.5 21.481M19.654 6.5c1.614 0 2.558 1.096 2.923 2.923L25.5 21.481"
            stroke="currentColor"
            strokeLinecap="round"
          />
        </svg>
      </span>
      <span
        className="sc-tNXst PUmeJ"
      >
        <svg
          className="sc-bpUBKd"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22.942 21.846h.558a2 2 0 002-2v-5.5a2 2 0 00-2-2h-15a2 2 0 00-2 2v5.5a2 2 0 002 2h.558m-.366-9.5V8.5a2 2 0 012-2h10.616a2 2 0 012 2v3.846m-.731 7.846V23.5a2 2 0 01-2 2h-9.154a2 2 0 01-2-2v-3.308a2 2 0 012-2h9.154a2 2 0 012 2z"
            stroke="currentColor"
          />
        </svg>
      </span>
      <div
        className="sc-fjhLSj cINGDc"
      >
        <svg
          className="sc-cfxfcM"
          fill="none"
          fontSize="2rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dialog Header renders Example 5 1`] = `
<div
  className="flex justify-around items-center w-full max-w-screen-sm"
>
  <div
    className="sc-cAkrUM dwdlh"
  >
    <div
      className="sc-iPahhU kgOmyB"
    >
      <svg
        className="sc-fjvvzt"
        fill="none"
        fontSize="2rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.5 25l-9-9 9-9"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </div>
    <div
      className="sc-hpEguC gAnXIF"
    >
      Title of the modal title of the modal title of the modal
    </div>
    <div
      className="sc-kjNGdX lNIRV"
    >
      <span
        className="sc-tNXst PUmeJ"
      >
        <svg
          className="sc-ehixzo"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13.808 21.846a3.654 3.654 0 11-7.308 0 3.654 3.654 0 017.308 0zm0 0h4.384m0 0a3.654 3.654 0 107.308 0 3.654 3.654 0 00-7.308 0zM12.346 6.5c-1.614 0-2.558 1.096-2.923 2.923L6.5 21.481M19.654 6.5c1.614 0 2.558 1.096 2.923 2.923L25.5 21.481"
            stroke="currentColor"
            strokeLinecap="round"
          />
        </svg>
      </span>
      <span
        className="sc-tNXst PUmeJ"
      >
        <svg
          className="sc-bpUBKd"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22.942 21.846h.558a2 2 0 002-2v-5.5a2 2 0 00-2-2h-15a2 2 0 00-2 2v5.5a2 2 0 002 2h.558m-.366-9.5V8.5a2 2 0 012-2h10.616a2 2 0 012 2v3.846m-.731 7.846V23.5a2 2 0 01-2 2h-9.154a2 2 0 01-2-2v-3.308a2 2 0 012-2h9.154a2 2 0 012 2z"
            stroke="currentColor"
          />
        </svg>
      </span>
      <div
        className="sc-fjhLSj cINGDc"
      >
        <svg
          className="sc-cfxfcM"
          fill="none"
          fontSize="2rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
